--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     <!-- Logo/Brand -->
     <div class="navbar-brand">
       <a href="/" class="brand-link">
-        <img src="{{ url_for('static', filename='img/logo olivar.png') }}" alt="Olivar Logo" class="brand-logo">
+        <!--<img src="{{ url_for('static', filename='img/logo olivar.png') }}" alt="Olivar Logo" class="brand-logo"> -->
       </a>
     </div>
 
