--- a/templates/inventarios.html
+++ b/templates/inventarios.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="header">
       <h1>Gerenciador</h1>
-      <button class="btn btn-primary" onclick="abrirModalCriar()">+ Novo</button>
+      <button class="btn btn-primary" onclick="abrirModalCriar()">Novo</button>
     </div>
 
     <div id="alert" class="alert"></div>
