Correções de rotas Nginx e validação de leitura na VPS

--- a/templates/leitura.html
+++ b/templates/leitura.html
@@ -17,7 +17,7 @@
           <span class="status-badge status-aberto">ABERTO</span>
         </div>
       </div>
-      <a href="/inventarios" class="btn btn-secondary">Voltar</a>
+      <a href="{{ url_for('inventarios') }}" class="btn btn-secondary">Voltar</a>
     </div>
 
     <div id="alert" class="alert"></div>
