--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
   <div class="navbar-container">
     <!-- Logo/Brand -->
     <div class="navbar-brand">
-      <a href="/" class="brand-link">
+      <a href="{{ url_for('index') }}" class="brand-link">
         <!--<img src="{{ url_for('static', filename='img/logo olivar.png') }}" alt="Olivar Logo" class="brand-logo"> -->
       </a>
     </div>
@@ -10,7 +10,7 @@
     <!-- Menu Links -->
     <ul class="navbar-menu">
       <li class="navbar-item">
-        <a href="/" class="navbar-link {% if request.path == '/' %}active{% endif %}">
+        <a href="{{ url_for('index') }}" class="navbar-link {% if request.path == '/' %}active{% endif %}">
           Análise de Estoque
         </a>
       </li>
